--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,20 @@
   --senary-color: #99aab5;
 }
 
-.body {
-  color: var(--senary-color);
+body {
+  background-color: var(--tertiary-color);
   font-family: Helvetica, Arial, sans-serif;
 }
 
 .nav {
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+}
+
+.logo {
+  height: 64px
+}
+
+.project {
+  height: 200px;
+  width: 300px
 }
