--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,19 @@
   --senary-color: #99aab5;
 }
 
+#root { 
+  height: 100vh;
+}
+
+html, body {
+  height: 100%;
+}
+
 body {
-  background-color: var(--tertiary-color);
+  background-color: var(--senary-color);
   font-family: Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav {
@@ -23,4 +33,12 @@ body {
 .project {
   height: 200px;
   width: 300px
+}
+
+.bodyDiv {
+  height: 100vh;
+}
+
+footer {
+  flex-shrink: 0;
 }
