Removed extra elements
Removed extra elements. Added Hardcoded content

--- a/.vscode/src/pages/cv.astro
+++ b/.vscode/src/pages/cv.astro
@@ -9,10 +9,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Hi there! my name is MArtin. I've been a long time Tech enthusiest. I started in the tech feild when I was about 10 building PC's and troubleshooting issues for 
+    various clientel. Since then I've worked proffesionally in the field for almost a decade through Ubreakifix. I studied Computer Information Technologies at HCC in Tampa
+    where I learned how to service and maintain tech at a buisness lecvel. I also developed an interest in coding at this time and started with database management through SQL.
+    After working for several years in the Tech Repair and Maintanence industry I decided I'd like to pivot into a more Professional enviroment. I sought Coding education through
+    University of Central Florida's Coding Bootcamp where I amped my coding skills by learning various Full Stack skills including Javascript, Mongoose, and React. 
   </div>
 
   <div class="mb-5">
