--- a/.vscode/src/pages/index.astro
+++ b/.vscode/src/pages/index.astro
@@ -19,10 +19,7 @@ const last_posts = posts.slice(0, 3);
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
+      <a class="btn" href="https://www.linkedin.com/in/martin-costas-9b6033233/" target="_blank"> Connect with Me </a>
     </div>
   </div>
 
