--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,7 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Hi there! my name is MArtin. I've been a long time Tech enthusiest. I started in the tech feild when I was about 10 building PC's and troubleshooting issues for 
+    Hi there! My name is Martin. I've been a long time Tech enthusiest. I started in the tech feild when I was about 10 building PC's and troubleshooting issues for 
     various clientel. Since then I've worked proffesionally in the field for almost a decade through Ubreakifix. I studied Computer Information Technologies at HCC in Tampa
     where I learned how to service and maintain tech at a buisness lecvel. I also developed an interest in coding at this time and started with database management through SQL.
     After working for several years in the Tech Repair and Maintanence industry I decided I'd like to pivot into a more Professional enviroment. I sought Coding education through
@@ -22,12 +22,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Full Stack Coding Bootcamp"
+      subtitle="2022 to 2022 at University of Central Florida, Orlando, Fl"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="AA in Computer Information Technology"
+      subtitle="2014 to 2018 at Hillsborough Community College, Tampa, Florida"
     />
   </div>
 
@@ -37,20 +37,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
-    >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
-    >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Technician"
+      subtitle="From 2016 to Current at Ubreakifix by Asurion, Brandon, Fl"
     >
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
     </TimeLineElement>
