--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -48,7 +48,7 @@ http {
 		}
 
 		## Document root
-		root /app/dist;
+		root /app/src;
 
 		location / {
 			## Clean URLs: match on extensionless requests.
